# PLS

./: CMakeLists.txt  README.md
include/PLS/: PartialLeastSquares.hh
source/: PartialLeastSquares.cpp  main.cpp
